Another safety commit - probably a bad project file for the UWP application.

--- a/Brigade/Brigade.WinPhone/packages.config
+++ b/Brigade/Brigade.WinPhone/packages.config
@@ -9,6 +9,7 @@
   <package id="Microsoft.Data.OData" version="5.6.4" targetFramework="wp8" />
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="wp8" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="wp8" />
+  <package id="System.Data.Common" version="4.0.1-rc2-24027" targetFramework="wp8" />
   <package id="System.Spatial" version="5.6.4" targetFramework="wp8" />
   <package id="WindowsAzure.Storage" version="7.0.0" targetFramework="wp8" />
   <package id="WPtoolkit" version="4.2013.08.16" targetFramework="wp8" />
