--- a/Brigade.UWP/Brigade.UWP.nuget.targets
+++ b/Brigade.UWP/Brigade.UWP.nuget.targets
@@ -4,6 +4,8 @@
     <NuGetPackageRoot>$(UserProfile)\.nuget\packages\</NuGetPackageRoot>
   </PropertyGroup>
   <ImportGroup>
+    <Import Project="$(NuGetPackageRoot)\Microsoft.Data.Sqlite\1.0.0-rc2-final\build\netcore50\Microsoft.Data.Sqlite.targets" Condition="Exists('$(NuGetPackageRoot)\Microsoft.Data.Sqlite\1.0.0-rc2-final\build\netcore50\Microsoft.Data.Sqlite.targets')" />
+    <Import Project="$(NuGetPackageRoot)\Microsoft.EntityFrameworkCore.Tools\1.0.0-preview1-final\build\netcore50\Microsoft.EntityFrameworkCore.Tools.targets" Condition="Exists('$(NuGetPackageRoot)\Microsoft.EntityFrameworkCore.Tools\1.0.0-preview1-final\build\netcore50\Microsoft.EntityFrameworkCore.Tools.targets')" />
     <Import Project="$(NuGetPackageRoot)\Xamarin.Forms\2.2.0.31\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets" Condition="Exists('$(NuGetPackageRoot)\Xamarin.Forms\2.2.0.31\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets')" />
   </ImportGroup>
 </Project>
