--- a/Brigade.UWP/project.json
+++ b/Brigade.UWP/project.json
@@ -1,6 +1,9 @@
 ﻿{
   "dependencies": {
+    "Microsoft.EntityFrameworkCore.Sqlite": "1.0.0-rc2-final",
+    "Microsoft.EntityFrameworkCore.Tools": "1.0.0-preview1-final",
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.0.0",
+    "System.Data.Common": "4.0.1-rc2-24027",
     "Xamarin.Forms": "2.2.0.31"
   },
   "frameworks": {
