--- a/Brigade/Brigade.iOS/packages.config
+++ b/Brigade/Brigade.iOS/packages.config
@@ -1,6 +1,46 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Autofac" version="3.5.2" targetFramework="xamarinios10" />
+  <package id="Ix-Async" version="1.2.5" targetFramework="xamarinios10" />
+  <package id="Microsoft.CSharp" version="4.0.1-rc2-24027" targetFramework="xamarinios10" />
+  <package id="Microsoft.Data.Sqlite" version="1.0.0-rc2-final" targetFramework="xamarinios10" />
+  <package id="Microsoft.EntityFrameworkCore" version="1.0.0-rc2-final" targetFramework="xamarinios10" />
+  <package id="Microsoft.EntityFrameworkCore.Relational" version="1.0.0-rc2-final" targetFramework="xamarinios10" />
+  <package id="Microsoft.EntityFrameworkCore.Sqlite" version="1.0.0-rc2-final" targetFramework="xamarinios10" />
+  <package id="Microsoft.Extensions.Caching.Abstractions" version="1.0.0-rc2-final" targetFramework="xamarinios10" />
+  <package id="Microsoft.Extensions.Caching.Memory" version="1.0.0-rc2-final" targetFramework="xamarinios10" />
+  <package id="Microsoft.Extensions.DependencyInjection" version="1.0.0-rc2-final" targetFramework="xamarinios10" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="1.0.0-rc2-final" targetFramework="xamarinios10" />
+  <package id="Microsoft.Extensions.Logging" version="1.0.0-rc2-final" targetFramework="xamarinios10" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="1.0.0-rc2-final" targetFramework="xamarinios10" />
+  <package id="Microsoft.Extensions.Options" version="1.0.0-rc2-final" targetFramework="xamarinios10" />
+  <package id="Microsoft.Extensions.Primitives" version="1.0.0-rc2-final" targetFramework="xamarinios10" />
+  <package id="Remotion.Linq" version="2.0.2" targetFramework="xamarinios10" />
+  <package id="System.AppContext" version="4.1.0-rc2-24027" targetFramework="xamarinios10" />
+  <package id="System.Collections" version="4.0.11-rc2-24027" targetFramework="xamarinios10" />
+  <package id="System.Collections.Concurrent" version="4.0.12-rc2-24027" targetFramework="xamarinios10" />
+  <package id="System.ComponentModel" version="4.0.1-rc2-24027" targetFramework="xamarinios10" />
+  <package id="System.ComponentModel.Annotations" version="4.1.0-rc2-24027" targetFramework="xamarinios10" />
+  <package id="System.Data.Common" version="4.0.1-rc2-24027" targetFramework="xamarinios10" />
+  <package id="System.Diagnostics.Debug" version="4.0.11-rc2-24027" targetFramework="xamarinios10" />
+  <package id="System.Diagnostics.DiagnosticSource" version="4.0.0-rc2-24027" targetFramework="xamarinios10" />
+  <package id="System.Globalization" version="4.0.11-rc2-24027" targetFramework="xamarinios10" />
+  <package id="System.IO.FileSystem" version="4.0.1-rc2-24027" targetFramework="xamarinios10" />
+  <package id="System.Linq" version="4.1.0-rc2-24027" targetFramework="xamarinios10" />
+  <package id="System.Linq.Expressions" version="4.0.11-rc2-24027" targetFramework="xamarinios10" />
+  <package id="System.Linq.Queryable" version="4.0.1-rc2-24027" targetFramework="xamarinios10" />
+  <package id="System.ObjectModel" version="4.0.12-rc2-24027" targetFramework="xamarinios10" />
+  <package id="System.Reflection" version="4.1.0-rc2-24027" targetFramework="xamarinios10" />
+  <package id="System.Reflection.Extensions" version="4.0.1-rc2-24027" targetFramework="xamarinios10" />
+  <package id="System.Reflection.TypeExtensions" version="4.1.0-rc2-24027" targetFramework="xamarinios10" />
+  <package id="System.Resources.ResourceManager" version="4.0.1-rc2-24027" targetFramework="xamarinios10" />
+  <package id="System.Runtime" version="4.1.0-rc2-24027" targetFramework="xamarinios10" />
+  <package id="System.Runtime.Extensions" version="4.1.0-rc2-24027" targetFramework="xamarinios10" />
+  <package id="System.Runtime.InteropServices" version="4.1.0-rc2-24027" targetFramework="xamarinios10" />
+  <package id="System.Text.Encoding" version="4.0.11-rc2-24027" targetFramework="xamarinios10" />
+  <package id="System.Text.RegularExpressions" version="4.0.12-rc2-24027" targetFramework="xamarinios10" />
+  <package id="System.Threading" version="4.0.11-rc2-24027" targetFramework="xamarinios10" />
+  <package id="System.Threading.Tasks" version="4.0.11-rc2-24027" targetFramework="xamarinios10" />
   <package id="WindowsAzure.Storage" version="7.0.0" targetFramework="xamarinios10" />
   <package id="Xamarin.Forms" version="2.2.0.31" targetFramework="xamarinios10" />
 </packages>
