--- a/Actors/Osmosys.Authority/Osmosys.Authority.csproj
+++ b/Actors/Osmosys.Authority/Osmosys.Authority.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{6DA45749-9B53-4231-83D0-89002247FF9E}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Osmosys.Authority</RootNamespace>
+    <RootNamespace>Osmosys</RootNamespace>
     <AssemblyName>Osmosys.Authority</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
